# rust-zero2-prod

./: Cargo.toml  Dockerfile  spec.yaml
.github/workflows/: general.yml
.sqlx/: query-b43eecf37d31e14905968f57caca75a25e497e276cfe8a3fba29e67787adaaa9.json
configuration/: base.yaml  production.yaml
migrations/: 20230728093553_make_status_not_null_in_subscriptions.sql  20230728093738_create_subscription_token_table.sql  20230806192602_create_user_table.sql  20230807193712_add_salt_to_users.sql  20230816031709_seed_user.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startup.rs
src/authentication/: middleware.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  helpers.rs  login.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
