[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"


[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1.29.1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4.2.0"
config = "0.13.3"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
chrono = { version = "0.4.26", default-features = false, features = ["clock"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = [
  "registry",
  "env-filter",
] }
tracing-bunyan-formatter = "0.3.8"
tracing-log = "0.1.3"
secrecy = { version = "0.8", features = ["serde"] }
tracing-actix-web = "0.7.5"
unicode-segmentation = "1.10.1"
validator = "0.16.1"
proc-macro2 = "1.0.66"
rand = { version = "0.8", features = ["std_rng"] }
thiserror = "1"
anyhow = "1"
base64 = "0.21"
sha3 = "0.10"
argon2 = { version = "0.5", features = ["std"] }
urlencoding = "2.1.3"
htmlescape = "0.3.1"
hmac = { version = "0.12.1", features = ["std"] }
sha2 = "0.10.7"
hex = "0.4.3"
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
actix-session = { version = "0.7.2", features = ["redis-rs-tls-session"] }
serde_json = "1"
actix-web-lab = "0.19.1"

[dependencies.reqwest]
version = "0.11.18"
default-features = false
features = ["json", "rustls-tls", "cookies"]

[dev-dependencies]
once_cell = "1.18"
claims = "0.7"
fake = "~2.6"
rand = "0.8.5"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
tokio = { "version" = "1.29.1", features = ["rt", "macros"] }
wiremock = "0.5"
serde_json = "1"
linkify = "0.10.0"

[dependencies.sqlx]
version = "0.7.1"
default-features = false
features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
]
